--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
   "name": "feedback-web",
   "version": "1.0.0",
   "description": "",
+  "homepage": "https://github.com/salman4519/feedback-webpage#readme",
+  "bugs": {
+    "url": "https://github.com/salman4519/feedback-webpage/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/salman4519/feedback-webpage.git"
+  },
   "license": "ISC",
   "author": "",
   "type": "commonjs",
